--- a/005-FeDevLib/RandomQuoteMachine/main.html
+++ b/005-FeDevLib/RandomQuoteMachine/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Quote Machine</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <div id="quote-box">
@@ -16,5 +17,6 @@
         <a id="tweet-quote"></a>
       </div>
     </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
