--- a/000-reviewGit/testFOlder/index.html
+++ b/000-reviewGit/testFOlder/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>This line is here to show how merging works.</p>
+  </body>
 </html>
