--- a/000-reviewGit/testFOlder/index.html
+++ b/000-reviewGit/testFOlder/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <h1>new line from new branch</h1>
   </head>
-  <body></body>
+  <body>
+    <p>A new line in our file!</p>
+  </body>
 </html>
