struct html for RandomQuoteMachine

--- a/005-FeDevLib/RandomQuoteMachine/main.html
+++ b/005-FeDevLib/RandomQuoteMachine/main.html
@@ -8,14 +8,12 @@
   </head>
   <body>
     <div id="quote-box">
-      <div>
-        <p id="text"></p>
-        <p id="author"></p>
-      </div>
-      <div>
-        <button id="new-quote"></button>
-        <a id="tweet-quote"></a>
-      </div>
+      <p id="text"></p>
+      <p id="author"></p>
+      <button id="new-quote">NEW</button>
+      <button>
+        <a href="twitter.com/intent/tweet" id="tweet-quote">Tweet</a>
+      </button>
     </div>
     <script src="scripts.js"></script>
   </body>
