fix html struct

--- a/005-FeDevLib/RandomQuoteMachine/main.html
+++ b/005-FeDevLib/RandomQuoteMachine/main.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Quote Machine</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </head>
   <body>
-    <div id="quote-box">
-      <p id="text"></p>
-      <p id="author"></p>
-      <button id="new-quote">NEW</button>
-      <button>
-        <a href="twitter.com/intent/tweet" id="tweet-quote">Tweet</a>
-      </button>
+    <div id="main-box">
+      <div id="quote-box">
+        <p id="text"></p>
+        <p id="author"></p>
+      </div>
+      <div id="credit-box">
+        <button id="new-quote">NEW</button>
+        <a href="https://github.com/coding-jhuunn">coding-jhuunn</a>
+      </div>
     </div>
+
     <script src="scripts.js"></script>
   </body>
 </html>
